crates/apollo-compiler/test_data/diagnostics/0092_recursive_fragment_spread.txt
Error: `fragA` fragment cannot reference itself
    ╭─[0092_recursive_fragment_spread.graphql:13:1]
    │
 13 │ fragment fragA on Human { name, ...fragB }
    │ ───────┬──────  
    │        ╰──────── recursive fragment definition
    │ 
 15 │ fragment fragC on Human { name, ...fragA }
    │                                 ────┬───  
    │                                     ╰───── refers to itself here
────╯

